--- a/rls_razor_replication.ipynb
+++ b/rls_razor_replication.ipynb
@@ -82,7 +82,7 @@
       },
       "outputs": [],
       "source": [
-        "MODEL_NAME = \"openai-community/gpt2\" # Changed to a publicly available model"
+        "MODEL_NAME = \"openai-community/gpt2\" # Changed to a smaller model, target LLAMA-3B"
       ]
     },
     {
@@ -91,7 +91,8 @@
         "id": "dSyqJwZCl2NU"
       },
       "source": [
-        "## Hyperparameters Sweep"
+        "## Hyperparameters Sweep\n",
+        "Reference Table 2 located in page 19 on the paper RL razor"
       ]
     },
     {
@@ -193,7 +194,7 @@
         "try:\n",
         "    math_dataset = load_dataset(\"Tonic/OpenReasonerZero\", split=\"train\")\n",
         "    print(f\"Loaded Open-Reasoner-Zero: {len(math_dataset)} examples\")\n",
-        "    # Add this before the train_sft call\n",
+        "    # Check dataset values\n",
         "    print(\"Dataset columns:\", math_dataset.column_names if hasattr(math_dataset, 'column_names') else 'N/A')\n",
         "    print(\"First example:\", math_dataset[0] if len(math_dataset) > 0 else 'Empty dataset')\n",
         "except:\n",
@@ -243,6 +244,7 @@
         "    # \"ifeval\",         # Zhou et al., 2023\n",
         "    # \"winogrande\",     # Sakaguchi et al., 2021\n",
         "    # \"humaneval\",      # Chen et al., 2021\n",
+        "    # Commented out to reduce the computation amount on evaluation due to GPU limits\n",
         "    \"winogrande\",\n",
         "    \"hellaswag\",\n",
         "    \"mmlu_high_school_mathematics\",\n",
@@ -272,9 +274,9 @@
         "    # Enable gradient checkpointing to save memory\n",
         "    model.gradient_checkpointing_enable()\n",
         "\n",
-        "    # First, format the dataset to create a 'text' field\n",
+        "    # Formating the dataset, creating a 'text' field\n",
         "    def format_dataset(examples):\n",
-        "        # Convert the nested structure to text format\n",
+        "        # Converting nested structure to text format\n",
         "        texts = []\n",
         "        for i in range(len(examples['0'])):\n",
         "            question = examples['0'][i]['value']\n",
@@ -294,7 +296,7 @@
         "    # Apply formatting\n",
         "    formatted_dataset = dataset.map(format_dataset, batched=True, remove_columns=dataset.column_names)\n",
         "\n",
-        "    # Select 300 examples ofr small run\n",
+        "    # Bc og GPU limitations selected 300 examples for small run\n",
         "    formatted_dataset = formatted_dataset.select(range(min(300, len(formatted_dataset))))\n",
         "    print(f\"Using {len(formatted_dataset)} examples for training\")\n",
         "\n",
@@ -416,7 +418,7 @@
         "\n",
         "    from trl import GRPOConfig, GRPOTrainer\n",
         "\n",
-        "    # Format dataset for GRPO - needs 'prompt' field\n",
+        "    # Format dataset for GRPO - this needs a 'prompt' field\n",
         "    def format_for_grpo(examples):\n",
         "        prompts = []\n",
         "        answers = []\n",
@@ -436,7 +438,7 @@
         "    # Format dataset\n",
         "    formatted_dataset = dataset.map(format_for_grpo, batched=True, remove_columns=dataset.column_names)\n",
         "\n",
-        "    # Reduce to 100 examples for speed\n",
+        "    # Reduce to 100 examples bc of Colab limits (delete on jupyter)\n",
         "    formatted_dataset = formatted_dataset.select(range(min(100, len(formatted_dataset))))\n",
         "    print(f\"Using {len(formatted_dataset)} examples for GRPO training\")\n",
         "\n",
@@ -464,10 +466,8 @@
         "        \"\"\"\n",
         "        rewards = []\n",
         "        for prompt, completion in zip(prompts, completions):\n",
-        "            # Simple check: reward 1.0 if completion contains numbers, 0.0 otherwise\n",
-        "            # You can replace this with actual answer checking logic\n",
         "            try:\n",
-        "                # Basic reward: check if completion has content\n",
+        "                # This is a basic reward fn, it checks if completion has content\n",
         "                if completion and len(completion.strip()) > 0:\n",
         "                    rewards.append(1.0)\n",
         "                else:\n",
@@ -526,7 +526,7 @@
         "        model=lm,\n",
         "        tasks=tasks,\n",
         "        num_fewshot=0,\n",
-        "        limit=limit,  # This will now default to 300\n",
+        "        limit=limit,\n",
         "        confirm_run_unsafe_code=True,\n",
         "        gen_kwargs={\"max_new_tokens\": max_gen_toks}\n",
         "    )\n",
@@ -573,7 +573,6 @@
         "            model_probs = F.softmax(model_logits, dim=-1)\n",
         "\n",
         "            # KL(base || model) - forward KL\n",
-        "            # Ensure shapes match for KL calculation\n",
         "            min_len = min(base_probs.size(1), model_probs.size(1))\n",
         "            base_probs = base_probs[:, :min_len, :]\n",
         "            model_probs = model_probs[:, :min_len, :]\n",
@@ -656,15 +655,15 @@
         "        'rl': [],\n",
         "    }\n",
         "\n",
-        "    # # SFT sweep (as in Table 2)\n",
+        "    # SFT sweep (as in Table 2)\n",
         "    print(\"\\n\" + \"=\"*70)\n",
         "    print(\"RUNNING SFT HYPERPARAMETER SWEEP\")\n",
         "    print(\"=\"*70)\n",
         "\n",
         "    for lr in sft_config['learning_rates']:\n",
-        "        for bs in [2, 4]:  # Smaller batch sizes\n",
+        "        for bs in [2, 4]:  # Smaller batch sizes, on paper [16,64]\n",
         "\n",
-        "            # CRITICAL: Clear memory before loading new model\n",
+        "            # Clear memory before loading new model\n",
         "            torch.cuda.empty_cache()\n",
         "            gc.collect()\n",
         "\n",
@@ -694,7 +693,7 @@
         "\n",
         "            print(f\"SFT lr={lr}, bs={bs}: Prior={prior_scores['average']:.4f}, KL={kl_div:.4f}\")\n",
         "\n",
-        "            # CRITICAL: Delete model and trainer immediately after use\n",
+        "            # Delete model and trainer immediately after use\n",
         "            del sft_model\n",
         "            del trainer\n",
         "            torch.cuda.empty_cache()\n",
@@ -841,8 +840,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "MsIz9Wchl2NX",
-        "collapsed": true
+        "id": "MsIz9Wchl2NX"
       },
       "outputs": [],
       "source": [
@@ -868,8 +866,7 @@
         "    print(f\"  • RL average prior score: {np.mean([r['prior_task_score'] for r in results['rl']]):.4f}\")\n",
         "    print(f\"  • SFT average prior score: {np.mean([r['prior_task_score'] for r in results['sft']]):.4f}\")\n",
         "    print(f\"  • RL average KL: {np.mean([r['kl_divergence'] for r in results['rl']]):.4f}\")\n",
-        "    print(f\"  • SFT average KL: {np.mean([r['kl_divergence'] for r in results['sft']]):.4f}\")\n",
-        "    print(\"\\n Results match paper's claims: RL forgets less and has smaller KL shifts\")"
+        "    print(f\"  • SFT average KL: {np.mean([r['kl_divergence'] for r in results['sft']]):.4f}\")"
       ]
     },
     {
